Add pseudocode for linear search procedure in markdown

--- a/Tugas_1/tugas.ipynb
+++ b/Tugas_1/tugas.ipynb
@@ -12,6 +12,14 @@
     "            return i\n",
     "    return -1\n",
     "\n",
+    "procedure linear_search (list, value)\n",
+    "   for each item in the list\n",
+    "      if match item == value\n",
+    "         return the item's location\n",
+    "      end if\n",
+    "   end for\n",
+    "end procedure\n",
+    "\n",
     "```"
    ]
   },
